--- a/src/500-potato/dev.pug
+++ b/src/500-potato/dev.pug
@@ -1,4 +1,5 @@
 .mr
+  h1 500
   .mr__head
   .mr__hat.hat
     .hat__bowl
@@ -14,3 +15,23 @@
     .shoe__body
     .shoe__sole
   .mr__nose
+  .mr__mouth
+  .mr__eye.mr__eye--left.eye
+    .eye__pupil
+    .eye__lid.eye__lid--upper
+    .eye__lid.eye__lid--lower
+  .mr__eye.mr__eye--right.eye
+    .eye__pupil
+    .eye__lid.eye__lid--upper
+    .eye__lid.eye__lid--lower
+  .mr__eye-brow.mr__eye-brow--left
+  .mr__eye-brow.mr__eye-brow--right
+  .mr__arm.mr__arm--left.arm
+    .hand
+      .finger
+      .finger
+      .finger
+      .finger
+  .mr__arm.mr__arm--right.arm
+    .fist
+h1.message Something isn't quite right.
