--- a/src/doge-500/dev.pug
+++ b/src/doge-500/dev.pug
@@ -15,3 +15,18 @@
           div(style=`--bg: ${colors[20]}`)
           div(style=`--bg: ${colors[21]}`)
     - i++
+.doge__container
+  .doge__badge
+  .doge__wrap
+    //- .doge__body
+    include doge-body.svg
+.messages
+  .message(style='--color: #ff1415') such 500
+  div
+  .message(style='--color: #7efcfc') many errors
+  .message(style='--color: #ff28ed') wow
+  div
+  div
+  .message(style='--color: #f9690e') very buggy
+  div
+  .message(style='--color: #86ef34') so broken
