Finish implementation of cpc-jellyfish

--- a/src/cpc-jellyfish-v2/style.styl
+++ b/src/cpc-jellyfish-v2/style.styl
@@ -3,17 +3,17 @@
 
 body
   align-items center
-  background dodgerblue
+  background linear-gradient(45deg, #4daf7c, #1ba39c)
   display flex
   justify-content center
   min-height 100vh
 
 .jellyfish
   height 150px
-  transform-origin bottom
+  transform-origin top
 
   @media(min-width 768px)
-    height 300px
+    height 150px
 
   &__jelly
     transform-origin bottom
