--- a/src/dynamic-mondrian/index.pug
+++ b/src/dynamic-mondrian/index.pug
@@ -10,4 +10,5 @@ html
       include dev.pug
     script(crossorigin, src="https://unpkg.com/react@16.7.0-alpha.2/umd/react.development.js")
     script(crossorigin, src="https://unpkg.com/react-dom@16.7.0-alpha.2/umd/react-dom.development.js")
+    script(src="https://unpkg.com/styled-components/dist/styled-components.min.js")
     script(src="script.js")
