Complete CSS bojack

--- a/src/css-bojack/dev.pug
+++ b/src/css-bojack/dev.pug
@@ -1,15 +1,21 @@
-img(src='https://vignette.wikia.nocookie.net/bojackhorseman/images/5/5b/BoJack_Horseman_opening_theme_15.png/revision/latest?cb=20180729213119')
+.bg
 .bojack
-  .bojack__hair-top--1
-  .bojack__hair-top--2
-  .bojack__hair-left--1
-  .bojack__hair-left--2
-  .bojack__hair-right--1
+  .bojack__hair.bojack__hair--top-1
+  .bojack__hair.bojack__hair--top-2
+  .bojack__hair.bojack__hair--top-3
+  .bojack__hair.bojack__hair--top-4
+  .bojack__hair.bojack__hair--left-1
+  .bojack__hair.bojack__hair--left-2
+  .bojack__hair.bojack__hair--right-1
   .bojack__base
   .bojack__ear-left
   .bojack__ear-right
     .bojack__ear-line
   .bojack__forehead
+  .bojack__forehead-square
+  .bojack__eyebrows
+  .bojack__eye.bojack__eye--left
+  .bojack__eye.bojack__eye--right
   .bojack__crown
   .bojack__neck
   .bojack__nose
