--- a/src/css-bojack/style.styl
+++ b/src/css-bojack/style.styl
@@ -8,33 +8,27 @@
 *:after
   position absolute
 
-
 body
   min-height 100vh
+  background radial-gradient(circle at 50%, #a537fd, transparent), #663399
   padding 0
   margin 0
   display flex
   align-items center
   justify-content center
-
-img
-  height 300px
-  width 300px
-  object-fit cover
-  object-position 48% 50%
-  opacity .2
-  position absolute
-  top 50%
-  left 50%
-  transform translate(-50%, -50%)
+  overflow hidden
 
 $stroke = 2px
+$brown = #8b5347
 
 .bojack
   height 300px
   width 300px
   position relative
-  opacity .2
+  transition transform .25s ease
+
+  @media(min-width 768px)
+    transform scale(1.75)
 
   *
     position absolute
@@ -47,7 +41,7 @@ $stroke = 2px
     top 2px
     transform translate(-47px, 0)
     z-index 4
-    background brown
+    background $brown
     border-radius 10px 15px 1px 15px/32px 64px 1px 30px
     $clip = polygon(0 0, 0 65px, 12px 65px, 15px 60px, 23px 46px, 25px 47px, 25px 0)
     clip-path $clip
@@ -74,14 +68,14 @@ $stroke = 2px
       width 28px
       border $stroke solid black
       transform translate(19px, 0)
-      background brown
+      background $brown
       border-radius 20px 1px 1px 1px/58px 1px 1px 1px
       $clip = polygon(0 0, 20px 0, 20px 4px, 20px 80%, 0 100%)
       clip-path $clip
       -webkit-clip-path $clip
 
     &:after
-      background brown
+      background $brown
       height 71px
       width 28px
       transform translate(19px, -3px)
@@ -91,127 +85,173 @@ $stroke = 2px
       clip-path $clip
       -webkit-clip-path $clip
 
-  &__hair-left--1
+  &__hair
     background black
-    height 10px
-    width 10px
-    left 50%
-    top 50%
-    transform translate(-49px, -45px) rotate(10deg)
-
-    &:before
-      height 5px
-      width 20px
-      background black
-      top -2px
-      left -5px
-      border-radius 100%
-      transform translate(-2px, 0px) rotate(50deg)
 
     &:after
-      height 5px
-      width 20px
-      background black
-      top -15px
-      left -9px
-      border-radius 100%
-      transform translate(-2px, 0) rotate(62deg)
-
-  &__hair-left--2
-    background black
-    height 55px
-    width 9px
-    left 50%
-    top 50%
-    border-radius 100%
-    transform translate(-46px, -87px) rotate(-12deg)
-
     &:before
       background black
-      height 20px
-      width 20px
-      top -5px
-      left 8px
-      transform rotate(12deg)
 
-  &__hair-top--1
-    background black
-    left 50%
-    top 10%
-    height 63px
-    width 8px
-    z-index 3
-    border-radius 100%
-    transform translate(-5px, -14px) rotate(17deg)
-
-    &:before
-      height 30px
-      width 6px
-      background black
-      border-radius 100%
-      transform rotate(-20deg) translate(0px, 20px)
-
-    &:after
-      border-radius 100%
-      background black
-      height 56px
+    &--left-1
+      height 10px
       width 10px
-      transform rotate(-22deg) skewY(10deg) translate(8px, 9px)
+      left 50%
+      top 50%
+      transform translate(-49px, -45px) rotate(10deg)
 
-  &__hair-top--2
-    left 50%
-    top 10%
-    z-index 3
-    background black
-    height 20px
-    width 8px
-    border-radius 1px 1px 30px 10px/1px 1px 56px 36px
-    transform translate(-22px, 5px) rotate(10deg)
+      &:before
+        height 5px
+        width 20px
+        top -2px
+        left -5px
+        border-radius 100%
+        transform translate(-2px, 0px) rotate(50deg)
 
-    &:after
-      height 17px
-      width 44px
-      background black
-      transform rotate(-23deg) translate(-1px, -9px)
+      &:after
+        height 5px
+        width 20px
+        top -15px
+        left -9px
+        border-radius 100%
+        transform translate(-2px, 0) rotate(62deg)
 
-    &:before
-      height 50px
+    &--left-2
+      height 55px
       width 9px
-      background black
-      border-radius 1px 1px 8px 5px/1px 1px 35px 35px
-      transform translate(8px, -17px) rotate(1deg)
-      $clip = inset(15% 0 0 0)
-      clip-path $clip
-      -webkit-clip-path $clip
+      left 50%
+      top 50%
+      border-radius 100%
+      transform translate(-46px, -87px) rotate(-12deg)
 
-  &__hair-right--1
-    background black
-    left 50%
-    top 50%
-    width 8px
-    height 30px
-    border-radius 100%
-    transform translate(41px, -97px) rotate(11deg)
+      &:before
+        height 20px
+        width 20px
+        top -5px
+        left 8px
+        transform rotate(12deg)
 
-    &:before
-      background black
-      height 30px
-      width 6px
-      border-radius 2px 3px 1px 1px/10px 20px 1px 1px
-      top 16px
-      left 6px
-      transform rotate(7deg)
+      &:after
+        background black
+        width 6px
+        height 22px
+        border-radius 100%
+        transform translate(53px, -37px) rotate(-41deg)
 
-    &:after
-      background black
+
+    &--top-1
+      left 50%
+      top 10%
+      height 63px
+      width 8px
+      z-index 3
+      border-radius 100%
+      transform translate(-5px, -14px) rotate(17deg)
+
+      &:before
+        height 30px
+        width 6px
+        border-radius 100%
+        transform rotate(-20deg) translate(0px, 20px)
+
+      &:after
+        border-radius 100%
+        height 56px
+        width 10px
+        transform rotate(-22deg) skewY(10deg) translate(8px, 9px)
+
+    &--top-2
+      left 50%
+      top 10%
+      z-index 3
       height 20px
-      width 4px
-      top 27px
-      left 12px
-      transform rotate(-29deg)
-      $clip = polygon(0 0, 100% 0, 100% 54%, 0 91%)
-      clip-path $clip
-      -webkit-clip-path $clip
+      width 8px
+      border-radius 1px 1px 30px 10px/1px 1px 56px 36px
+      transform translate(-22px, 5px) rotate(10deg)
+
+      &:after
+        height 17px
+        width 44px
+        transform rotate(-23deg) translate(-1px, -9px)
+
+      &:before
+        height 50px
+        width 9px
+        border-radius 1px 1px 8px 5px/1px 1px 35px 35px
+        transform translate(8px, -17px) rotate(1deg)
+        $clip = inset(15% 0 0 0)
+        clip-path $clip
+        -webkit-clip-path $clip
+
+    &--top-3
+      left 50%
+      top 10%
+      z-index 6
+      height 23px
+      width 7px
+      border-radius 7px 1px 1px 7px/9px 1px 1px 11px
+      transform translate(-14px, -13px) rotate(90deg) skewY(25deg)
+
+      &:before
+        background black
+        width 12px
+        height 18px
+        border-radius 100%
+        transform skewY(-25deg) translate(5px, -25px) rotate(12deg)
+
+      &:after
+        width 7px
+        height 24px
+        border-radius 8px 1px 1px 8px/15px 1px 1px 22px
+        transform skewY(-25deg) translate(-1px, -23px) rotate(-12deg)
+
+
+    &--top-4
+      left 50%
+      top 10%
+      height 48px
+      width 9px
+      z-index 6
+      border-radius 1px 1px 9px 3px/1px 1px 20px 21px
+      transform rotate(-8deg) translate(5px, 5px)
+
+      &:after
+        height 42px
+        width 8px
+        border-radius 1px 1px 6px 3px/1px 1px 20px 16px
+        transform rotate(-10deg) translate(8px, 1px)
+
+      &:before
+        height 32px
+        width 8px
+        background black
+        border-radius 100%
+        transform rotate(-20deg) translate(13px, -1px)
+
+    &--right-1
+      left 50%
+      top 50%
+      width 8px
+      height 30px
+      border-radius 100%
+      transform translate(41px, -97px) rotate(11deg)
+
+      &:before
+        height 30px
+        width 6px
+        border-radius 2px 3px 1px 1px/10px 20px 1px 1px
+        top 16px
+        left 6px
+        transform rotate(7deg)
+
+      &:after
+        height 20px
+        width 4px
+        top 27px
+        left 12px
+        transform rotate(-29deg)
+        $clip = polygon(0 0, 100% 0, 100% 54%, 0 91%)
+        clip-path $clip
+        -webkit-clip-path $clip
 
   &__ear-line
     height 47px
@@ -268,7 +308,7 @@ $stroke = 2px
 
   &__base
     width 108px
-    background brown
+    background $brown
     height 80px
     left 50%
     top 47%
@@ -278,7 +318,7 @@ $stroke = 2px
     z-index 2
 
     &:after
-      background brown
+      background $brown
       width 94px
       height 20px
       top -4px
@@ -291,7 +331,7 @@ $stroke = 2px
     top 20%
     transform translate(-49px, 3px)
     border-radius 8px 10px 9px 14px / 26px 19px 20px 27px
-    background brown
+    background $brown
     border $stroke solid black
     opacity 0
 
@@ -302,12 +342,12 @@ $stroke = 2px
     top 20%
     transform translate(-49px, 14px)
     border-radius 8px 10px 9px 9px / 26px 19px 20px 27px
-    background brown
+    background $brown
     border $stroke solid black
 
     &:before
       content ''
-      background brown
+      background $brown
       border-left $stroke solid black
       height 42px
       width 57px
@@ -317,13 +357,110 @@ $stroke = 2px
 
     &:after
       content ''
-      background brown
+      background $brown
       border-right $stroke solid black
       height 42px
       width 57px
       top -34px
       left 32px
       transform translate(5px, 14px) rotate(-14deg)
+
+  &__forehead-square
+    height 55px
+    width 25px
+    background black
+    top 73px
+    left 138px
+    z-index 6
+    $clip = polygon(49% 0, 100% 54%, 55% 100%, 0 53%)
+    clip-path $clip
+    -webkit-clip-path $clip
+
+    &:after
+      background white
+      clip-path $clip
+      -webkit-clip-path $clip
+      height 100%
+      width 100%
+      transform scale(0.86)
+
+  &__eyebrows
+    z-index 6
+    height 2px
+    width 17px
+    top 90px
+    left 107px
+    background black
+    transform rotate(-8deg)
+
+    &:after
+      height 2px
+      width 17px
+      top 9px
+      left 70px
+      background black
+      transform rotate(19deg)
+
+  &__eye
+    background white
+    border $stroke solid black
+    z-index 7
+
+    &--left
+      height 21px
+      width 21px
+      border-radius 100%
+      top 102px
+      left 104px
+
+      &:before
+        background black
+        border-radius 100%
+        height 7px
+        width 7px
+        top 50%
+        left 50%
+        transform translate(-50%, -43%)
+
+      &:after
+        height 30px
+        width 30px
+        border 5px double black
+        border-radius 100%
+        top -3px
+        left -6px
+        $clip = polygon(13px 20px, 26px 17px, 30px 30px, 21px 27px, 11px 28px)
+        clip-path $clip
+        -webkit-clip-path $clip
+
+    &--right
+      height 20px
+      width 20px
+      border-radius 100%
+      top 101px
+      left 178px
+
+      &:before
+        background black
+        border-radius 100%
+        height 7px
+        width 7px
+        top 50%
+        left 50%
+        transform translate(-50%, -43%)
+
+      &:after
+        height 30px
+        width 30px
+        border 5px double black
+        border-radius 100%
+        top -6px
+        left -9px
+        transform-origin bottom left
+        transform rotate(4deg)
+        $clip = polygon(5px 20px, 21px 24px, 22px 26px, 7px 30px)
+        clip-path $clip
+        -webkit-clip-path $clip
 
   &__nose
     top 50%
@@ -334,7 +471,7 @@ $stroke = 2px
   &__snout
     width 58px
     height 90px
-    background brown
+    background $brown
     top 50%
     left 50%
     transform translate(-49%, -25%)
@@ -354,7 +491,7 @@ $stroke = 2px
     transform-origin bottom
 
   &__nostrils
-    background brown
+    background $brown
     height 25px
     width 68px
     top 50%
@@ -433,7 +570,7 @@ $stroke = 2px
 
   &__neck
     width 110px
-    background brown
+    background $brown
     top 50%
     left 50%
     transform translate(-48%, 0%) rotate(1deg)
@@ -492,7 +629,7 @@ $stroke = 2px
     overflow hidden
 
   &__nose-splodge
-    background pink
+    background #e5aed1
     border-radius 100%
 
     &--1
@@ -528,7 +665,7 @@ $stroke = 2px
   &__chest
     width 125px
     height 65px
-    background brown
+    background $brown
     top 50%
     left 50%
     transform translate(-50%, 65px)
