Updates + infinite triangles

--- a/src/cpc-skeletons/style.styl
+++ b/src/cpc-skeletons/style.styl
@@ -67,7 +67,7 @@ $boardWidth = $width * 0.85
 
 .xray
   background-color #111
-  background-image url(https://jh3y-doodles.netlify.com/bear-skeleton.svg)
+  background-image url(./skeleton.svg)
   height ($boardHeight * $mobile)
   width ($boardWidth * $mobile)
   position absolute
@@ -114,4 +114,4 @@ $boardWidth = $width * 0.85
 
 
 .bear
-  background-image url(https://jh3y-doodles.netlify.com/bear-ready-for-xray.svg)
+  background-image url(./bear.svg)
